Bugfix, change of View with confirm works and content in rows middle aligned in tables

--- a/client/main.css
+++ b/client/main.css
@@ -11,3 +11,8 @@
     /*width: 10%;*/
     /*height: auto;*/
 /*}*/
+
+/*Override BS3's vertical-align: */
+.table>thead>tr>th, .table>tbody>tr>th, .table>tfoot>tr>th, .table>thead>tr>td, .table>tbody>tr>td, .table>tfoot>tr>td {
+    vertical-align: middle;
+}
